[gd_scene load_steps=7 format=3 uid="uid://c6u1gqy1agpn0"]

[ext_resource type="Script" path="res://ui/health_bar/scripts/health_bar.gd" id="1_blcgs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q4sna"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfdnc"]
bg_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rl3pq"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ifsf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bedib"]
bg_color = Color(0.588235, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[node name="HealthBarContainer" type="PanelContainer"]
offset_right = 256.0
offset_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_q4sna")
script = ExtResource("1_blcgs")

[node name="AlterationBar" type="ProgressBar" parent="."]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_lfdnc")
theme_override_styles/fill = SubResource("StyleBoxFlat_rl3pq")
step = 0.0
value = 100.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxEmpty_2ifsf")
theme_override_styles/fill = SubResource("StyleBoxFlat_bedib")
step = 0.0
value = 100.0
show_percentage = false

[node name="Shading" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ShadeTop2" type="ColorRect" parent="Shading"]
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="ShadeTop1" type="ColorRect" parent="Shading"]
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 1, 1, 0.25)

[node name="ShadeCenter" type="ColorRect" parent="Shading"]
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 1, 1, 0.5)

[node name="ShadeBottom1" type="ColorRect" parent="Shading"]
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 1, 1, 0.25)

[node name="ShadeBottom2" type="ColorRect" parent="Shading"]
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="AlterationTweenTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HealthTweenTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AlterationTweenTimer" to="." method="_on_alteration_tween_timer_timeout"]
[connection signal="timeout" from="HealthTweenTimer" to="." method="_on_health_tween_timer_timeout"]
